--- a/style.css
+++ b/style.css
@@ -54,8 +54,17 @@ html{
         --shadow: rgba(0,0,0,0.1);
     }
 }
+/* Mobile */
+@media only screen and (max-width: 768px) {
+    .script-container{
+        width: 100%;
+    }
+    .snippet-container{
+        width: 100%;
+    }
+  }
 
-
+/* Desktop */
 /* Body */
 body{
 
