--- a/style.css
+++ b/style.css
@@ -61,7 +61,23 @@ html{
         margin-left: 0;
         margin-right: 0;
     }
-  }
+    
+    footer {
+        /* Footer */
+
+            /* Dimenstions */
+            height: 100px;
+            width: 100vw;
+
+            /* Font & Text */
+            line-height: 100px;
+            font-size: 20px;
+            font-weight: 100;
+            text-align: center;
+            
+        }
+}
+
 
 /* Desktop */
 /* Body */
