--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ html{
             font-weight: 100;
             text-align: center;
             
+            background-color: gold;
         }
 }
 
