--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ html{
 
         /* Margins & Padding */
         margin-left: 0px;
+
+        /* Font & Text */
+        text-align: center;
     
     }
     
