--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html{
         height: 200px;
 
         /* Margins & Padding */
-        margin-left: 0;
+        margin-left: 0px;
         padding: 0;
 
         /* Font & Text */
