--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ html{
             font-weight: 100;
             text-align: center;
             
+            color: #0b0b0b;
             background-color: gold;
         }
 }
