--- a/style.css
+++ b/style.css
@@ -68,6 +68,18 @@ html{
         margin-right: auto;
     }
 
+    .title, .subtitle {
+        width: 100vw;
+        text-align: center;
+        /* Margins & Padding */
+        margin-left: 0px;
+    }
+
+    .script-container .subtitle{
+        text-align: left;
+        width: 100%;
+    }
+
     .dl-button{
         /* Dimensions */
         height: 50px;
@@ -136,8 +148,12 @@ html{
         height: 75px;
         width: 100%;
         
+        /* Margins & Padding */
+        margin-top: 20px;
+
         /* Display */
         display: block;
+
     }
     
 }
@@ -145,12 +161,18 @@ html{
 
 /* Desktop */
 @media only screen and (min-width: 415px) {
+
     /* Croissant */
     .croissant{
         /* Margins & Padding */
         margin-top:40vh;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .title, .subtitle {
+        /* Margins & Padding */
+        margin-left: 20px;
     }
 
     /* Download Buttons */
@@ -300,8 +322,6 @@ body{
     font-size: 50px;
     font-weight: 100;
 
-    /* Margins & Padding */
-    margin-left: 20px;
 }
 
 
@@ -311,8 +331,6 @@ body{
     font-size: 25px;
     font-weight: 300;
 
-    /* Margins & Padding */
-    margin-left: 20px;
 }
 
 
