--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ body{
     /* Position */
     position: relative;
 
-    /* Dimenstions */
+    /* Dimensions */
     min-height: 20vh;
     max-height: fit-content;
     width: 85vw;
